--- a/news.html
+++ b/news.html
@@ -27,12 +27,12 @@
                     <a href="#"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="#">關於我們</a>
-                    <a href="#">最新消息</a>
-                    <a href="#">商品介紹</a>
-                    <a href="#">認識狗兒</a>
-                    <a href="#">預約定位</a>
-                    <a href="#">聯絡我們</a>
+                    <a href="index.html #aboutus">關於我們</a>
+                    <a href="news.html">最新消息</a>
+                    <a href="product.html">商品介紹</a>
+                    <a href="introduction.html">認識狗兒</a>
+                    <a href="reserve.html">預約定位</a>
+                    <a href="contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
                     <i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i>
