--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="#"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
                     <a href="index.html #aboutus">關於我們</a>
