新增頁尾導覽列

--- a/introduction.html
+++ b/introduction.html
@@ -178,12 +178,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p>關於我們</p>
-                    <p>最新消息</p>
-                    <p>商品介紹</p>
-                    <p>認識狗兒</p>
-                    <p>預約 / 訂位</p>
-                    <p>認識狗兒</p>
+                    <p> <a href="index.html">關於我們</a></p>
+                    <p><a href="news.html"></a>最新消息</p>
+                    <p><a href="product.html"></a>商品介紹</p>
+                    <p><a href="introduction.html"></a>認識狗兒</p>
+                    <p><a href="reserve.html"></a>預約訂位</p>
+                    <p><a href="contact.html"></a>認識狗兒</p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
