修改尾頁導覽列

--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p> <a href="index.html">關於我們</a></p>
-                    <p><a href="news.html"></a>最新消息</p>
-                    <p><a href="product.html"></a>商品介紹</p>
-                    <p><a href="introduction.html"></a>認識狗兒</p>
-                    <p><a href="reserve.html"></a>預約訂位</p>
-                    <p><a href="contact.html"></a>認識狗兒</p>
+                    <p><a href="index.html">關於我們</a></p>
+                    <p><a href="news.html">最新消息</a></p>
+                    <p><a href="product.html">商品介紹</a></p>
+                    <p><a href="introduction.html">認識狗兒</a></p>
+                    <p><a href="reserve.html">預約訂位</a></p>
+                    <p><a href="contact.html">認識狗兒</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
