修改尾頁聯絡我們

--- a/product.html
+++ b/product.html
@@ -246,7 +246,7 @@
                     <p><a href="product.html">商品介紹</a></p>
                     <p><a href="introduction.html">認識狗兒</a></p>
                     <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">認識狗兒</a></p>
+                    <p><a href="contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
