--- a/reserve.html
+++ b/reserve.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html">關於我們</a></p>
+                    <p><a href="index.html #aboutus">關於我們</a></p>
                     <p><a href="news.html">最新消息</a></p>
                     <p><a href="product.html">商品介紹</a></p>
                     <p><a href="introduction.html">認識狗兒</a></p>
