新增頁尾logo連結

--- a/introduction.html
+++ b/introduction.html
@@ -168,7 +168,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <img src="../gogocafe/pic/logo.svg" alt="">
+                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
