新增login和sign連結

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                     <a href="contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i>
+                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -73,7 +73,7 @@
                         </div>
                         <div class="login_title_btn">
                             <div class="login_button_sign">
-                                <input type="button" value="立即註冊" name="name" id="login_button_sign" >
+                                <a href="sign.html"><input type="button" value="立即註冊" name="name" id="login_button_sign" ></a>
                             </div>
                             <div class="login_button_login">
                                 <input type="button" value="登入" name="name" id="login_button_login" >
