--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
                     <a href="contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i>
+                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
