--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -45,7 +45,7 @@
     <!-- 第二欄 -->
     <banner>
         <div class="banner">
-            <img src="../gogocafe/pic/banner.svg" alt="">
+            <img src="./pic/banner.svg" alt="">
         </div>
         <div class="banner_box">
             <div class="banner_title">
@@ -71,7 +71,7 @@
         <div class="about_container">
             <div class="about_pic_txt">
                 <div class="about_pic-coffee">
-                    <img src="../gogocafe/pic/coffe.jpg" alt="">
+                    <img src="./pic/coffe.jpg" alt="">
                 </div>
                 <div class="about_txt">
                     <div class="about_txt_title">
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="about_pic-dog">
-                <img src="../gogocafe/pic/dog.svg" alt="">
+                <img src="./pic/dog.svg" alt="">
             </div>
         </div>
     </section>
@@ -99,13 +99,13 @@
     <!-- 第四欄 -->
     <section class="news_section">
         <div class="bgc_filter">
-            <img src="../gogocafe/pic/filter.png" alt="">
+            <img src="./pic/filter.png" alt="">
         </div>
         <div class="bgc_slice1">
-            <img src="../gogocafe/pic/slice-1.png" alt="">
+            <img src="./pic/slice-1.png" alt="">
         </div>
         <div class="bgc_kettle">
-            <img src="../gogocafe/pic/kettle.png" alt="">
+            <img src="./pic/kettle.png" alt="">
         </div>
         <div class="news_container">   
             <div class="news_title">
@@ -116,23 +116,23 @@
             <div class="horizontal_line_news_right"></div>
             <div class="news_pic">
                 <div class="news_pic_01">
-                    <img src="../gogocafe/pic/news-01.png" alt="">
+                    <img src="./pic/news-01.png" alt="">
                 </div>
                 <div class="news_pic_bottom">
                     <div class="news_pic_02_03">
                         <div class="news_pic_02">
-                            <img src="../gogocafe/pic/news-02.png" alt="">
+                            <img src="./pic/news-02.png" alt="">
                         </div>
                         <div class="news_pic_03">
-                            <img src="../gogocafe/pic/news-03.png" alt="">
+                            <img src="./pic/news-03.png" alt="">
                         </div>
                     </div>
                     <div class="news_pic_04_05">
                         <div class="news_pic_04">
-                            <img src="../gogocafe/pic/news-04.png" alt="">
+                            <img src="./pic/news-04.png" alt="">
                         </div>
                         <div class="news_pic_05">
-                            <img src="../gogocafe/pic/news-05.png" alt="">
+                            <img src="./pic/news-05.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -146,10 +146,10 @@
                 </div>
             </div>
             <div class="news_turn_left">
-                <img src="../gogocafe/pic/arrow-left.svg" alt="">
+                <img src="./pic/arrow-left.svg" alt="">
             </div>
             <div class="news_turn_right">
-                <img src="../gogocafe/pic/arrow-right.svg" alt="">
+                <img src="./pic/arrow-right.svg" alt="">
             </div>
             <div class="news_button">
                 <input type="button" value="more" name="name" id="news_button" >
@@ -160,7 +160,7 @@
     <!-- 第五欄 -->
     <section class="product_section">
         <div class="bgc_lice3">
-            <img src="../gogocafe/pic/slice-3.png" alt="">
+            <img src="./pic/slice-3.png" alt="">
         </div>
         <div class="product_container">
             <div class="product_row">
@@ -170,32 +170,32 @@
                 </div>
                 <div class="product_pic">
                         <div class="product_pic_drink">
-                            <img src="../gogocafe/pic/drink.svg" alt="drink">
+                            <img src="./pic/drink.svg" alt="drink">
                             <h3>飲品</h3>
                             <p>
                             從濃鬱的咖啡到香濃的奶茶，再到清爽的水果茶，每一杯都是獨一無二的美味體驗。 立即點擊，發現你的新寵！</p>
                         </div>
                         <div class="product_pic_food">
-                            <img src="../gogocafe/pic/food.svg" alt="food">
+                            <img src="./pic/food.svg" alt="food">
                             <h3>美食</h3>
                             <p>
                             從清爽的沙拉到豐盛的三明治，再到誘人的鬆餅和蛋糕，每一道都是精心制作的美味佳餚。立即點擊，满足您的味蕾！
                             </p>
                         </div>
                         <div class="product_pic_dessert">
-                            <img src="../gogocafe/pic/dessert.svg" alt="dessert">
+                            <img src="./pic/dessert.svg" alt="dessert">
                             <h3>甜點</h3>
                             <p>
                             精緻的蛋糕到香脆的餅乾，再到誘人的杯子蛋糕和香滑的布丁，每一款都是甜點界的精華。 快來點擊，盡情享受甜蜜時刻！</p>
                         </div>
                         <div class="product_turn_right_right">
-                            <img src="../gogocafe/pic/arrow-right.svg" alt="">
+                            <img src="./pic/arrow-right.svg" alt="">
                         </div>
                         <div class="product_turn_right_left">
-                            <img src="../gogocafe/pic/arrow-right.svg" alt="">
+                            <img src="./pic/arrow-right.svg" alt="">
                         </div>
                         <div class="product_turn_right_center">
-                            <img src="../gogocafe/pic/arrow-right.svg" alt="">
+                            <img src="./pic/arrow-right.svg" alt="">
                         </div>
                 </div>
                 <div class="product_button">
@@ -209,22 +209,22 @@
     <!-- 第六欄 -->
     <section class="app_section">
         <div class="bgc_coffeebean_left">
-            <img src="../gogocafe/pic/coffee-bean-left.png" alt="">
+            <img src="./pic/coffee-bean-left.png" alt="">
         </div>
         <div class="bgc_coffeebean_right">
-            <img src="../gogocafe/pic/coffee-bean-right.png" alt="">
+            <img src="./pic/coffee-bean-right.png" alt="">
         </div>
         <div class="bgc_coffeepot">
-            <img src="../gogocafe/pic/coffee-pot.png" alt="">
+            <img src="./pic/coffee-pot.png" alt="">
         </div>
         <div class="bgc_slice2">
-            <img src="../gogocafe/pic/slice-2.png" alt="">
+            <img src="./pic/slice-2.png" alt="">
         </div>
 
         <div class="app_container">
             <div class="app_box">
                 <div class="app_pic">
-                    <img src="../gogocafe/pic/phone.svg" alt="">
+                    <img src="./pic/phone.svg" alt="">
                 </div>
                 <div class="app_tidy">
                     <div class="app_txt">
@@ -240,10 +240,10 @@
                     </div>
                     <div class="app_app">
                         <div class="app_app_google">
-                            <img src="../gogocafe/pic/google.svg" alt="">
+                            <img src="./pic/google.svg" alt="">
                         </div>
                         <div class="app_app_apple">
-                            <img src="../gogocafe/pic/apple.svg" alt="">
+                            <img src="./pic/apple.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -266,12 +266,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
