--- a/introduction.html
+++ b/introduction.html
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -47,7 +47,7 @@
         <div class="intr_container">
             <div class="intr_row">
                 <div class="intr_pic">
-                    <img src="../gogocafe/pic/coffee fruit-left.png" alt="">
+                    <img src="./pic/coffee fruit-left.png" alt="">
                 </div>
                 <div class="intr_title">
                     <p>認識狗兒</p>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="intr_slash"></div>
                 <div class="intr_pic">
-                    <img src="../gogocafe/pic/coffee fruit-right.png" alt="">
+                    <img src="./pic/coffee fruit-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
     <section class="meet_section">
         <div class="meet-container">
             <div class="meet_bgc_slice1">
-                <img src="../gogocafe/pic/Introduction/introduction_slice1.png" alt="">
+                <img src="./pic/Introduction/introduction_slice1.png" alt="">
             </div>
             <div class="meet_row">
                 <div class="meet_path">
@@ -77,22 +77,22 @@
                 </div>
                 <div class="meet_circle">
                     <div class="meet_circle_1">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle1.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle1.png" alt="">
                     </div>
                     <div class="meet_circle_2">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle2.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle2.png" alt="">
                     </div>
                     <div class="meet_circle_3">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle3.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle3.png" alt="">
                     </div>
                     <div class="meet_circle_4">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle4.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle4.png" alt="">
                     </div>
                     <div class="meet_circle_5">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle5.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle5.png" alt="">
                     </div>
                     <div class="meet_circle_6">
-                        <img src="../gogocafe/pic/Introduction/introduction_circle6.png" alt="">
+                        <img src="./pic/Introduction/introduction_circle6.png" alt="">
                     </div>
                 </div>
             </div>
@@ -104,42 +104,42 @@
     <!-- 第四欄 -->
     <section class="photo_section">
         <div class="photo_bgc_dog1">
-            <img src="../gogocafe/pic/Introduction/introduction_dog1.png" alt="">
+            <img src="./pic/Introduction/introduction_dog1.png" alt="">
         </div>
         <div class="photo_bgc_dog2">
-            <img src="../gogocafe/pic/Introduction/introduction_dog2.png" alt="">
+            <img src="./pic/Introduction/introduction_dog2.png" alt="">
         </div>
         <div class="photo_bgc_dog3">
-            <img src="../gogocafe/pic/Introduction/introduction_dog3.png" alt="">
+            <img src="./pic/Introduction/introduction_dog3.png" alt="">
         </div>
         <div class="photo_bgc_slice2">
-            <img src="../gogocafe/pic/Introduction/introduction_slice2.png" alt="">
+            <img src="./pic/Introduction/introduction_slice2.png" alt="">
         </div>
         <div class="photo_bgc_slice3">
-            <img src="../gogocafe/pic/Introduction/introduction_slice3.png" alt="">
+            <img src="./pic/Introduction/introduction_slice3.png" alt="">
         </div>
 
         <div class="photo_container">
             <div class="photo_row">
                 <div class="photo_pic">
                     <div class="photo_pic_big">
-                        <img src="../gogocafe/pic/Introduction/introduction_photo_big.png" alt="">
+                        <img src="./pic/Introduction/introduction_photo_big.png" alt="">
                     </div>
                     <div class="photo_pic_small">
                         <div class="photo_pic_small1">
-                            <img src="../gogocafe/pic/Introduction/introduction_photo_small1.png" alt="">
+                            <img src="./pic/Introduction/introduction_photo_small1.png" alt="">
                         </div>
                         <div class="photo_pic_small2">
-                            <img src="../gogocafe/pic/Introduction/introduction_photo_small2.png" alt="">
+                            <img src="./pic/Introduction/introduction_photo_small2.png" alt="">
                         </div>
                         <div class="photo_pic_small3">
-                            <img src="../gogocafe/pic/Introduction/introduction_photo_small3.png" alt="">
+                            <img src="./pic/Introduction/introduction_photo_small3.png" alt="">
                         </div>
                         <div class="photo_pic_small4">
-                            <img src="../gogocafe/pic/Introduction/introduction_photo_small4.png" alt="">
+                            <img src="./pic/Introduction/introduction_photo_small4.png" alt="">
                         </div>
                         <div class="photo_pic_small5">
-                            <img src="../gogocafe/pic/Introduction/introduction_photo_small5.png" alt="">
+                            <img src="./pic/Introduction/introduction_photo_small5.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -178,12 +178,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./ndex.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
