--- a/news.html
+++ b/news.html
@@ -24,15 +24,15 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
                     <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
@@ -48,7 +48,7 @@
         <div class="news_container">
             <div class="news_row">
                 <div class="news_pic">
-                    <img src="../gogocafe/pic/coffee fruit-left.png" alt="">
+                    <img src="./pic/coffee fruit-left.png" alt="">
                 </div>
                 <div class="news_title">
                     <p>最新消息</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="news_slash"></div>
                 <div class="news_pic">
-                    <img src="../gogocafe/pic/coffee fruit-right.png" alt="">
+                    <img src="./pic/coffee fruit-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -65,34 +65,34 @@
     <!-- 第三欄 -->
     <section class="active_section">
         <div class="bgc_slice1">
-            <img src="../gogocafe/pic/active-slice1.png" alt="">
+            <img src="./pic/active-slice1.png" alt="">
         </div>
         <div class="bgc_coffee_bean">
-            <img src="../gogocafe/pic/active-coffeebean.png" alt="">
+            <img src="./pic/active-coffeebean.png" alt="">
         </div>
         <div class="bgc_slice2">
-            <img src="../gogocafe/pic/active-slice2.png" alt="">
+            <img src="./pic/active-slice2.png" alt="">
         </div>
         <div class="bgc_coffee_grinder">
-            <img src="../gogocafe/pic/active-coffee grinder.png" alt="">
+            <img src="./pic/active-coffee grinder.png" alt="">
         </div>
         <div class="bgc_slice3">
-            <img src="../gogocafe/pic/active-slice3.png" alt="">
+            <img src="./pic/active-slice3.png" alt="">
         </div>
         <div class="bgc_cook_coffee">
-            <img src="../gogocafe/pic/active-cook coffee.png" alt="">
+            <img src="./pic/active-cook coffee.png" alt="">
         </div>
         <div class="bgc_slice4">
-            <img src="../gogocafe/pic/active-slice4.png" alt="">
+            <img src="./pic/active-slice4.png" alt="">
         </div>
         <div class="bgc_coffee_cup">
-            <img src="../gogocafe/pic/active-cup.png" alt="">
+            <img src="./pic/active-cup.png" alt="">
         </div>
         <div class="bgc_slice5">
-            <img src="../gogocafe/pic/active-slice5.png" alt="">
+            <img src="./pic/active-slice5.png" alt="">
         </div>
         <div class="bgc_people_dirnk">
-            <img src="../gogocafe/pic/active-people dirnk.png" alt="">
+            <img src="./pic/active-people dirnk.png" alt="">
         </div>
         <div class="active_container">
             <div class="active_row">
@@ -104,11 +104,11 @@
                 </div>
                 <div class="active_con1">
                     <div class="active_pic1">
-                        <img src="../gogocafe/pic/active-01.png" alt="">
+                        <img src="./pic/active-01.png" alt="">
                     </div>
                     <div class="active_tidy1">
                         <div class="active_num1">
-                        <img src="../gogocafe/pic/active-num01.png" alt="">
+                        <img src="./pic/active-num01.png" alt="">
                     </div>
                     <div class="active_txt">
                         <div class="active_txt_title">
@@ -123,7 +123,7 @@
                 <div class="active_con2">
                     <div class="active_tidy2">
                         <div class="active_num2">
-                            <img src="../gogocafe/pic/active-num02.png" alt="">
+                            <img src="./pic/active-num02.png" alt="">
                         </div>
                         <div class="active_txt">
                             <div class="active_txt_title">
@@ -135,16 +135,16 @@
                         </div>
                     </div>
                     <div class="active_pic2">
-                        <img src="../gogocafe/pic/active-02.png" alt="">
+                        <img src="./pic/active-02.png" alt="">
                     </div>
                 </div>
                 <div class="active_con3">
                     <div class="active_pic3">
-                        <img src="../gogocafe/pic/active-03.png" alt="">
+                        <img src="./pic/active-03.png" alt="">
                     </div>
                     <div class="active_tidy3">
                         <div class="active_num3">
-                        <img src="../gogocafe/pic/active-num03.png" alt="">
+                        <img src="./pic/active-num03.png" alt="">
                     </div>
                     <div class="active_txt">
                         <div class="active_txt_title">
@@ -166,13 +166,13 @@
         <div class="nextpage_container">
             <div class="nextpage_row">
                 <div class="active_nextpage_pic_left">
-                    <img src="../gogocafe/pic/active-arrow-left.png" alt="">
+                    <img src="./pic/active-arrow-left.png" alt="">
                 </div>
                 <div class="active_nextpage_page">
                     <p>1／3</p>
                 </div>
                 <div class="active_nextpage_pic_right">
-                    <img src="../gogocafe/pic/active-arrow-right.png" alt="">
+                    <img src="./pic/active-arrow-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -193,12 +193,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
