--- a/contact.html
+++ b/contact.html
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -47,7 +47,7 @@
         <div class="news_container">
             <div class="news_row">
                 <div class="news_pic">
-                    <img src="../gogocafe/pic/coffee fruit-left.png" alt="">
+                    <img src="./pic/coffee fruit-left.png" alt="">
                 </div>
                 <div class="news_title">
                     <p>聯絡我們</p>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="news_slash"></div>
                 <div class="news_pic">
-                    <img src="../gogocafe/pic/coffee fruit-right.png" alt="">
+                    <img src="./pic/coffee fruit-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <!-- 第三欄 -->
     <section class="path_section">
         <div class="path_bgc_slice5">
-            <img src="../gogocafe/pic/contact/contact-slice5.png" alt="">
+            <img src="./pic/contact/contact-slice5.png" alt="">
         </div>
         <div class="path_container">
             <div class="path_row">
@@ -84,21 +84,21 @@
     <!-- 第四欄 -->
     <section class="map_section">
         <div class="map_bgc_coffeebean">
-            <img src="../gogocafe/pic/contact/contact-coffeebean.png" alt="">
+            <img src="./pic/contact/contact-coffeebean.png" alt="">
         </div>
         <div class="map_bgc_slice1">
-            <img src="../gogocafe/pic/contact/contact-slice1.png" alt="">
+            <img src="./pic/contact/contact-slice1.png" alt="">
         </div>
         <div class="map_bgc_coffee-grinder">
-            <img src="../gogocafe/pic/contact/contact-coffee-grinder.png" alt="">
+            <img src="./pic/contact/contact-coffee-grinder.png" alt="">
         </div>
         <div class="map_bgc_slice2">
-            <img src="../gogocafe/pic/contact/contact-slice2.png" alt="">
+            <img src="./pic/contact/contact-slice2.png" alt="">
         </div>
         <div class="map_container">
             <div class="map_row">
                 <div class="map_pic">
-                    <img src="../gogocafe/pic/contact/contact-map.png" alt="">
+                    <img src="./pic/contact/contact-map.png" alt="">
                 </div>
                 <div class="map_txt">
                     <div class="map_txt_con">
@@ -121,19 +121,19 @@
     <!-- 第五欄 -->
     <section class="form_section">
         <div class="form_bgc_cook_coffee">
-            <img src="../gogocafe/pic/contact/contact-cook-coffee.png" alt="">
+            <img src="./pic/contact/contact-cook-coffee.png" alt="">
         </div>
         <div class="map_bgc_slice3">
-            <img src="../gogocafe/pic/contact/contact-slice3.png" alt="">
+            <img src="./pic/contact/contact-slice3.png" alt="">
         </div>
         <div class="map_bgc_cup">
-            <img src="../gogocafe/pic/contact/contact-cup.png" alt="">
+            <img src="./pic/contact/contact-cup.png" alt="">
         </div>
         <div class="map_bgc_slice4">
-            <img src="../gogocafe/pic/contact/contact-slice4.png" alt="">
+            <img src="./pic/contact/contact-slice4.png" alt="">
         </div>
         <div class="map_bgc_people_drink">
-            <img src="../gogocafe/pic/contact/contact-people-drink.png" alt="">
+            <img src="./pic/contact/contact-people-drink.png" alt="">
         </div>
         <div class="form_container">
             <div class="form_row">
@@ -180,7 +180,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -190,12 +190,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
