--- a/product.html
+++ b/product.html
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -47,7 +47,7 @@
         <div class="product_container">
             <div class="product_row">
                 <div class="product_pic">
-                    <img src="../gogocafe/pic/coffee fruit-left.png" alt="">
+                    <img src="./pic/coffee fruit-left.png" alt="">
                 </div>
                 <div class="product_title">
                     <p>商品介紹</p>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="product_slash"></div>
                 <div class="product_pic">
-                    <img src="../gogocafe/pic/coffee fruit-right.png" alt="">
+                    <img src="./pic/coffee fruit-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <!-- 第三欄 -->
     <section class="select_section">
         <div class="bgc_product_slice1">
-            <img src="../gogocafe/pic/product/product-slice1.png" alt="">
+            <img src="./pic/product/product-slice1.png" alt="">
         </div>
         <div class="select_container">
             <div class="select_row">
@@ -89,31 +89,31 @@
     <section class="drink_section">
         <div class="drink_container">
             <div class="drink_bgc_coffeebean">
-                <img src="../gogocafe/pic/product/product-coffee-bean.png" alt="">
+                <img src="./pic/product/product-coffee-bean.png" alt="">
             </div>
             <div class="drink_bgc_slice2">
-                <img src="../gogocafe/pic/product/product-slice2.png" alt="">
+                <img src="./pic/product/product-slice2.png" alt="">
             </div>
             <div class="drink_bgc_coffee_grinder">
-                <img src="../gogocafe/pic/product/product-coffee-grinder.png" alt="">
+                <img src="./pic/product/product-coffee-grinder.png" alt="">
             </div>
             <div class="bgc_product_slice3">
-                <img src="../gogocafe/pic/product/product-slice3.png" alt="">
+                <img src="./pic/product/product-slice3.png" alt="">
             </div>
             <div class="bgc_product_cook_coffee">
-                <img src="../gogocafe/pic/product/product-cook-coffee.png" alt="">
+                <img src="./pic/product/product-cook-coffee.png" alt="">
             </div>
             <div class="bgc_product_coffee">
-                <img src="../gogocafe/pic/product/product-coffee.png" alt="">
+                <img src="./pic/product/product-coffee.png" alt="">
             </div>
             <div class="drink_row">
                 <div class="coffee_series">
                     <div class="coffee_series_left">
-                        <img src="../gogocafe/pic/product/product-coffee-left.png" alt="">
+                        <img src="./pic/product/product-coffee-left.png" alt="">
                     </div>
                     <div class="coffee_series_right">
                         <div class="coffee_series_right_txt_bgc">
-                                <img src="../gogocafe/pic/product/product-coffee-right.png" alt="">
+                                <img src="./pic/product/product-coffee-right.png" alt="">
                             </div>
                         <div class="coffee_series_right_txt">
                             <div class="coffee_series_right_title">
@@ -141,20 +141,20 @@
     <!-- 第五欄 奶茶系列 -->
     <section class="drink_section">
         <div class="bgc_product_milk_tea">
-            <img src="../gogocafe/pic/product/milk-tea.png" alt="">
+            <img src="./pic/product/milk-tea.png" alt="">
         </div>
         <div class="drink_container">
             <div class="drink_bgc_slice4">
-                <img src="../gogocafe/pic/product/product-slice4.png" alt="">
+                <img src="./pic/product/product-slice4.png" alt="">
             </div>
             <div class="drink_row">
                 <div class="coffee_series">
                     <div class="coffee_series_left">
-                        <img src="../gogocafe/pic/product/product_milk_tea_left.png" alt="">
+                        <img src="./pic/product/product_milk_tea_left.png" alt="">
                     </div>
                     <div class="coffee_series_right">
                         <div class="coffee_series_right_txt_bgc">
-                                <img src="../gogocafe/pic/product/product_milk_tea_right.png" alt="">
+                                <img src="./pic/product/product_milk_tea_right.png" alt="">
                             </div>
                         <div class="coffee_series_right_txt">
                             <div class="coffee_series_right_title">
@@ -182,26 +182,26 @@
     <!-- 第六欄 水果茶系列 -->
     <section class="drink_section">
         <div class="bgc_product_fruit_tea">
-            <img src="../gogocafe/pic/product/fruit-tea.png" alt="">
+            <img src="./pic/product/fruit-tea.png" alt="">
         </div>
         <div class="drink_container">
             <div class="drink_bgc_coffee-cup">
-                <img src="../gogocafe/pic/product/product-cup.png" alt="">
+                <img src="./pic/product/product-cup.png" alt="">
             </div>
             <div class="drink_bgc_slice5">
-                <img src="../gogocafe/pic/product/product-slice5.png" alt="">
+                <img src="./pic/product/product-slice5.png" alt="">
             </div>
             <div class="drink_bgc_people_dirnk">
-                <img src="../gogocafe/pic/product/product-people dirnk.png" alt="">
+                <img src="./pic/product/product-people dirnk.png" alt="">
             </div>
             <div class="drink_row">
                 <div class="coffee_series">
                     <div class="coffee_series_left">
-                        <img src="../gogocafe/pic/product/product_fruit_tea_left.png" alt="">
+                        <img src="./pic/product/product_fruit_tea_left.png" alt="">
                     </div>
                     <div class="coffee_series_right">
                         <div class="coffee_series_right_txt_bgc">
-                                <img src="../gogocafe/pic/product/product_fruit_tea_right.png" alt="">
+                                <img src="./pic/product/product_fruit_tea_right.png" alt="">
                             </div>
                         <div class="coffee_series_right_txt">
                             <div class="coffee_series_right_title">
@@ -231,7 +231,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -241,12 +241,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
