--- a/reserve.html
+++ b/reserve.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="reserve-set.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./reserve-set.css">
     <script src="https://kit.fontawesome.com/588030a060.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -47,7 +47,7 @@
         <div class="reserve_container">
             <div class="reserve_row">
                 <div class="reserve_pic">
-                    <img src="../gogocafe/pic/coffee fruit-left.png" alt="">
+                    <img src="./pic/coffee fruit-left.png" alt="">
                 </div>
                 <div class="reserve_title">
                     <p>預約訂位</p>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="reserve_slash"></div>
                 <div class="reserve_pic">
-                    <img src="../gogocafe/pic/coffee fruit-right.png" alt="">
+                    <img src="./pic/coffee fruit-right.png" alt="">
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
     <!-- 第五欄 -->
     <section class="send_section">
         <div class="send_bgc_tree">
-            <img src="../gogocafe/pic/reserve/reserve_tree.png" alt="">
+            <img src="./pic/reserve/reserve_tree.png" alt="">
         </div>
         <div class="send_container">
             <div class="send_button">
@@ -147,7 +147,7 @@
     <footer class="footer_bgc">
         <div class="footer_container">
             <div class="footer_logo">
-                <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
             </div>
             <div class="footer_con">
                 <div class="footer_contact">
@@ -157,12 +157,12 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="index.html #aboutus">關於我們</a></p>
-                    <p><a href="news.html">最新消息</a></p>
-                    <p><a href="product.html">商品介紹</a></p>
-                    <p><a href="introduction.html">認識狗兒</a></p>
-                    <p><a href="reserve.html">預約訂位</a></p>
-                    <p><a href="contact.html">聯絡我們</a></p>
+                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./news.html">最新消息</a></p>
+                    <p><a href="./product.html">商品介紹</a></p>
+                    <p><a href="./introduction.html">認識狗兒</a></p>
+                    <p><a href="./reserve.html">預約訂位</a></p>
+                    <p><a href="./contact.html">聯絡我們</a></p>
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_follow">
