--- a/sign.html
+++ b/sign.html
@@ -23,18 +23,18 @@
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
-                    <a href="index.html"><img src="../gogocafe/pic/logo.svg" alt="logo"></a>
+                    <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="index.html #aboutus">關於我們</a>
-                    <a href="news.html">最新消息</a>
-                    <a href="product.html">商品介紹</a>
-                    <a href="introduction.html">認識狗兒</a>
-                    <a href="reserve.html">預約定位</a>
-                    <a href="contact.html">聯絡我們</a>
+                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./news.html">最新消息</a>
+                    <a href="./product.html">商品介紹</a>
+                    <a href="./introduction.html">認識狗兒</a>
+                    <a href="./reserve.html">預約定位</a>
+                    <a href="./contact.html">聯絡我們</a>
                     <div class="header_icon">
                     <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
                 </nav>
             </div>          
@@ -87,19 +87,19 @@
                         <div class="login_left_other_community">
                             <div class="login_left_other_google">
                             <div class="login_left_other_google_icon">
-                                <img src="../gogocafe/pic/member/google.png" alt="">
+                                <img src="./pic/member/google.png" alt="">
                             </div>
                             <div class="login_left_other_google_txt">以Google方式登入</div>
                         </div>
                         <div class="login_left_other_fb">
                             <div class="login_left_other_fb_icon">
-                                <img src="../gogocafe/pic/member/facebook.png" alt="">
+                                <img src="./pic/member/facebook.png" alt="">
                             </div>
                             <div class="login_left_other_fb_txt">以Facebook方式註冊</div>
                         </div>
                         <div class="login_left_other_line">
                             <div class="login_left_other_line_icon">
-                                <img src="../gogocafe/pic/member/line.png" alt="">
+                                <img src="./pic/member/line.png" alt="">
                             </div>
                             <div class="login_left_other_line_txt">以Line方式註冊</div>
                         </div>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="login_right">
-                    <img src="../gogocafe/pic/member/bgc.png" alt="">
+                    <img src="./pic/member/bgc.png" alt="">
                     <div class="login_right_txt">
                         <div class="login_right_txt_title">
                             <p>加入會員，與我們一起探索無限的狗狗樂趣！</p>
