修改nav aboutus路徑和名稱

--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
                     <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./index.html#AboutUs">關於我們</a>
                     <a href="./news.html">最新消息</a>
                     <a href="./product.html">商品介紹</a>
                     <a href="./introduction.html">認識狗兒</a>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="./index.html#aboutus">關於我們</a></p>
+                    <p><a href="./index.html#AboutUs">關於我們</a></p>
                     <p><a href="./news.html">最新消息</a></p>
                     <p><a href="./product.html">商品介紹</a></p>
                     <p><a href="./introduction.html">認識狗兒</a></p>
