--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                     <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
                 <nav>
-                    <a href="./index.html#aboutus">關於我們</a>
+                    <a href="./index.html#AboutUs">關於我們</a>
                     <a href="./news.html">最新消息</a>
                     <a href="./product.html">商品介紹</a>
                     <a href="./introduction.html">認識狗兒</a>
