--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="gogocafe-set.css">
+    
     <script src="https://kit.fontawesome.com/588030a060.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="gogocafe-set.css">
 </head>
 <body>
     <!-- 第一欄 -->
+
     <header>
         <div class="header_container">
             <div class="header_row">
                 <div class="header_pic">
                     <a href="./index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 </div>
-                <nav>
-                    <a href="#AboutUs">關於我們</a>
-                    <a href="./news.html">最新消息</a>
-                    <a href="./product.html">商品介紹</a>
-                    <a href="./introduction.html">認識狗兒</a>
-                    <a href="./reserve.html">預約定位</a>
-                    <a href="./contact.html">聯絡我們</a>
+                <div class="header_right">
+                    <nav>
+                        <!-- <a href="#AboutUs">關於我們</a> -->
+                        <a href="./news.html">最新消息</a>
+                        <a href="./product.html">商品介紹</a>
+                        <a href="./introduction.html">認識狗兒</a>
+                        <a href="./reserve.html">預約定位</a>
+                        <a href="./contact.html">聯絡我們</a>
+                    </nav>
                     <div class="header_icon">
-                    <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
-                    <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
+                        <i class="fa-solid fa-magnifying-glass fa-xl" style="color:#FCEBE3"></i>
+                        <a href="./login.html"><i class="fa-solid fa-user fa-xl" style="color:#FCEBE3"></i></a>
                     </div>
-                </nav>
+                </div>
             </div>          
         </div>
     </header>
-
 
     <!-- 第二欄 -->
     <banner>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="footer_slice"></div>
                 <div class="footer_nav">
-                    <p><a href="#AboutUs">關於我們</a></p>
+                    <!-- <p><a href="#AboutUs">關於我們</a></p> -->
                     <p><a href="./news.html">最新消息</a></p>
                     <p><a href="./product.html">商品介紹</a></p>
                     <p><a href="./introduction.html">認識狗兒</a></p>
