修改首頁aboutus的內容

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="horizontal_line_about_right"></div>
                     <div class="about_txt_con">
                         <p>
-                        歡迎來到我們的GogoCafe，這是一個讓您與小孩一起享受愉快時光的方！我們以提供歡樂舒適環境和美味的咖啡聞名，您能盡情放鬆和愉悅。
+                        歡迎來到我們的GogoCafe，這是一個讓您與毛小孩一起享受愉快時光的地方！我們以提供歡樂舒適環境和美味的咖啡聞名，讓您能感到放鬆和愉悅。
                         <br><br>此外我們提供各種精心調的咖啡和狗狗主題的美食以及一系列的活動和服務讓您和您的寵物享受到最的樂趣。加入我們，讓我一起創造難忘的回憶和美時光！
                         </p>
                     </div>
