--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GoGo咖啡廳</title>
     <link rel="stylesheet" href="reset.css">
     
     <script src="https://kit.fontawesome.com/588030a060.js" crossorigin="anonymous"></script>
